--- a/style.css
+++ b/style.css
@@ -16,3 +16,10 @@
 .papan div:nth-child(even) {
     background-color: rgb(40, 40, 194);
 }
+
+.papan div:nth-child(odd):hover {
+    background-color: black;
+}
+.papan div:nth-child(even):hover {
+    background-color: white;
+}
