--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
     grid-template-columns: repeat(9,50px);
     grid-template-rows: repeat(9, 50px);
     justify-content: center;
-    margin-left: 50px;
-    margin-top: 50px;
+    margin: auto;
+    padding-top: 50px;
 }
 .papan div {
     border: 1px solid black;
